revamp gnn dataset and add statistical tests

--- a/Code/Modelling/Graph Neural Network/Analyze Learnable Network for Rating Prediction.ipynb
+++ b/Code/Modelling/Graph Neural Network/Analyze Learnable Network for Rating Prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "      <td>3.188264</td>\n",
        "      <td>0.003822</td>\n",
        "      <td>train</td>\n",
-       "      <td>272</td>\n",
+       "      <td>1208</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -121,7 +121,7 @@
        "      <td>3.681858</td>\n",
        "      <td>0.002766</td>\n",
        "      <td>train</td>\n",
-       "      <td>1499</td>\n",
+       "      <td>334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -145,7 +145,7 @@
        "      <td>1.307366</td>\n",
        "      <td>0.004628</td>\n",
        "      <td>train</td>\n",
-       "      <td>814</td>\n",
+       "      <td>1694</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -169,7 +169,7 @@
        "      <td>2.025933</td>\n",
        "      <td>0.003861</td>\n",
        "      <td>train</td>\n",
-       "      <td>1888</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -193,7 +193,7 @@
        "      <td>1.815531</td>\n",
        "      <td>0.003915</td>\n",
        "      <td>train</td>\n",
-       "      <td>1224</td>\n",
+       "      <td>808</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -220,7 +220,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1959</th>\n",
+       "      <th>1958</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>2016-01-01</td>\n",
        "      <td>2015-11-10</td>\n",
@@ -241,10 +241,10 @@
        "      <td>0.982796</td>\n",
        "      <td>0.005321</td>\n",
        "      <td>train</td>\n",
-       "      <td>369</td>\n",
+       "      <td>141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1960</th>\n",
+       "      <th>1959</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>2016-04-01</td>\n",
        "      <td>2016-02-25</td>\n",
@@ -265,10 +265,10 @@
        "      <td>1.925784</td>\n",
        "      <td>0.002704</td>\n",
        "      <td>train</td>\n",
-       "      <td>839</td>\n",
+       "      <td>40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1961</th>\n",
+       "      <th>1960</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>2016-07-01</td>\n",
        "      <td>2016-05-10</td>\n",
@@ -289,10 +289,10 @@
        "      <td>-0.423271</td>\n",
        "      <td>0.002775</td>\n",
        "      <td>train</td>\n",
-       "      <td>448</td>\n",
+       "      <td>1449</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1962</th>\n",
+       "      <th>1961</th>\n",
        "      <td>ZBRA</td>\n",
        "      <td>2016-10-01</td>\n",
        "      <td>2016-08-09</td>\n",
@@ -313,10 +313,10 @@
        "      <td>1.210391</td>\n",
        "      <td>0.003215</td>\n",
        "      <td>test</td>\n",
-       "      <td>1286</td>\n",
+       "      <td>298</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1963</th>\n",
+       "      <th>1962</th>\n",
        "      <td>ZTS</td>\n",
        "      <td>2015-04-01</td>\n",
        "      <td>2015-02-11</td>\n",
@@ -337,11 +337,11 @@
        "      <td>0.981249</td>\n",
        "      <td>0.003480</td>\n",
        "      <td>train</td>\n",
-       "      <td>71</td>\n",
+       "      <td>930</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1964 rows × 205 columns</p>\n",
+       "<p>1963 rows × 205 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -352,11 +352,11 @@
        "3      AAPL         2015-07-01         2015-04-27     AA  2015-06-02   \n",
        "4      AAPL         2015-10-01         2015-07-21     AA  2015-08-25   \n",
        "...     ...                ...                ...    ...         ...   \n",
-       "1959   ZBRA         2016-01-01         2015-11-10      B  2015-09-03   \n",
-       "1960   ZBRA         2016-04-01         2016-02-25      B  2015-09-03   \n",
-       "1961   ZBRA         2016-07-01         2016-05-10      B  2015-09-03   \n",
-       "1962   ZBRA         2016-10-01         2016-08-09      B  2016-09-26   \n",
-       "1963    ZTS         2015-04-01         2015-02-11    BBB  2015-01-30   \n",
+       "1958   ZBRA         2016-01-01         2015-11-10      B  2015-09-03   \n",
+       "1959   ZBRA         2016-04-01         2016-02-25      B  2015-09-03   \n",
+       "1960   ZBRA         2016-07-01         2016-05-10      B  2015-09-03   \n",
+       "1961   ZBRA         2016-10-01         2016-08-09      B  2016-09-26   \n",
+       "1962    ZTS         2015-04-01         2015-02-11    BBB  2015-01-30   \n",
        "\n",
        "     Next Rating Next Rating Date Previous Rating Previous Rating Date  \\\n",
        "0             AA       2015-02-18             AAA           2014-04-24   \n",
@@ -365,11 +365,11 @@
        "3             AA       2015-08-25              AA           2015-05-28   \n",
        "4             AA       2016-05-20              AA           2015-06-02   \n",
        "...          ...              ...             ...                  ...   \n",
+       "1958           B       2016-09-26             NaN                  NaN   \n",
        "1959           B       2016-09-26             NaN                  NaN   \n",
        "1960           B       2016-09-26             NaN                  NaN   \n",
-       "1961           B       2016-09-26             NaN                  NaN   \n",
-       "1962         NaN              NaN               B           2015-09-03   \n",
-       "1963         BBB       2015-11-03             BBB           2014-01-31   \n",
+       "1961         NaN              NaN               B           2015-09-03   \n",
+       "1962         BBB       2015-11-03             BBB           2014-01-31   \n",
        "\n",
        "     next_rating_date_or_end_of_data  ...  Ovrst Undrst        PN         SW  \\\n",
        "0                         2015-02-18  ...    364    131  5.518519  15.261905   \n",
@@ -378,29 +378,29 @@
        "3                         2015-08-25  ...    415    135  5.250000   9.142857   \n",
        "4                         2016-05-20  ...    449    148  4.209877  10.442857   \n",
        "...                              ...  ...    ...    ...       ...        ...   \n",
-       "1959                      2016-09-26  ...    431    202  2.662338  13.586667   \n",
-       "1960                      2016-09-26  ...    449    173  3.991071  13.574713   \n",
-       "1961                      2016-09-26  ...    394    197  2.671053   8.080357   \n",
-       "1962                      2016-12-31  ...    403    183  3.625954  12.151163   \n",
-       "1963                      2015-11-03  ...    366    179  2.992000  13.830986   \n",
+       "1958                      2016-09-26  ...    431    202  2.662338  13.586667   \n",
+       "1959                      2016-09-26  ...    449    173  3.991071  13.574713   \n",
+       "1960                      2016-09-26  ...    394    197  2.671053   8.080357   \n",
+       "1961                      2016-12-31  ...    403    183  3.625954  12.151163   \n",
+       "1962                      2015-11-03  ...    366    179  2.992000  13.830986   \n",
        "\n",
        "            AP        OU      tone num_q_by_len  train_test_80_20  node  \n",
-       "0     2.661290  2.778626  3.188264     0.003822             train   272  \n",
-       "1     3.296482  3.059211  3.681858     0.002766             train  1499  \n",
-       "2     2.841346  3.099338  1.307366     0.004628             train   814  \n",
-       "3     2.640187  3.074074  2.025933     0.003861             train  1888  \n",
-       "4     2.579909  3.033784  1.815531     0.003915             train  1224  \n",
+       "0     2.661290  2.778626  3.188264     0.003822             train  1208  \n",
+       "1     3.296482  3.059211  3.681858     0.002766             train   334  \n",
+       "2     2.841346  3.099338  1.307366     0.004628             train  1694  \n",
+       "3     2.640187  3.074074  2.025933     0.003861             train    90  \n",
+       "4     2.579909  3.033784  1.815531     0.003915             train   808  \n",
        "...        ...       ...       ...          ...               ...   ...  \n",
-       "1959  2.768293  2.133663  0.982796     0.005321             train   369  \n",
-       "1960  2.382550  2.595376  1.925784     0.002704             train   839  \n",
-       "1961  2.446970  2.000000 -0.423271     0.002775             train   448  \n",
-       "1962  3.066116  2.202186  1.210391     0.003215              test  1286  \n",
-       "1963  2.276094  2.044693  0.981249     0.003480             train    71  \n",
+       "1958  2.768293  2.133663  0.982796     0.005321             train   141  \n",
+       "1959  2.382550  2.595376  1.925784     0.002704             train    40  \n",
+       "1960  2.446970  2.000000 -0.423271     0.002775             train  1449  \n",
+       "1961  3.066116  2.202186  1.210391     0.003215              test   298  \n",
+       "1962  2.276094  2.044693  0.981249     0.003480             train   930  \n",
        "\n",
-       "[1964 rows x 205 columns]"
+       "[1963 rows x 205 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -444,28 +444,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1487</td>\n",
-       "      <td>1611</td>\n",
+       "      <td>119</td>\n",
+       "      <td>1525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1010</td>\n",
-       "      <td>1611</td>\n",
+       "      <td>870</td>\n",
+       "      <td>1525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>127</td>\n",
-       "      <td>1611</td>\n",
+       "      <td>1359</td>\n",
+       "      <td>1525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>858</td>\n",
-       "      <td>1611</td>\n",
+       "      <td>1907</td>\n",
+       "      <td>1525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>333</td>\n",
-       "      <td>1611</td>\n",
+       "      <td>491</td>\n",
+       "      <td>1525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -473,53 +473,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1800</th>\n",
+       "      <td>1124</td>\n",
+       "      <td>1454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1801</th>\n",
-       "      <td>1814</td>\n",
-       "      <td>1851</td>\n",
+       "      <td>619</td>\n",
+       "      <td>434</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1802</th>\n",
-       "      <td>1556</td>\n",
-       "      <td>1859</td>\n",
+       "      <td>1279</td>\n",
+       "      <td>996</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1803</th>\n",
-       "      <td>908</td>\n",
-       "      <td>813</td>\n",
+       "      <td>14</td>\n",
+       "      <td>484</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1804</th>\n",
-       "      <td>123</td>\n",
-       "      <td>610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1805</th>\n",
-       "      <td>123</td>\n",
-       "      <td>702</td>\n",
+       "      <td>14</td>\n",
+       "      <td>495</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1806 rows × 2 columns</p>\n",
+       "<p>1805 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "       src   dst\n",
-       "0     1487  1611\n",
-       "1     1010  1611\n",
-       "2      127  1611\n",
-       "3      858  1611\n",
-       "4      333  1611\n",
+       "0      119  1525\n",
+       "1      870  1525\n",
+       "2     1359  1525\n",
+       "3     1907  1525\n",
+       "4      491  1525\n",
        "...    ...   ...\n",
-       "1801  1814  1851\n",
-       "1802  1556  1859\n",
-       "1803   908   813\n",
-       "1804   123   610\n",
-       "1805   123   702\n",
+       "1800  1124  1454\n",
+       "1801   619   434\n",
+       "1802  1279   996\n",
+       "1803    14   484\n",
+       "1804    14   495\n",
        "\n",
-       "[1806 rows x 2 columns]"
+       "[1805 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -547,11 +547,12 @@
      "output_type": "stream",
      "text": [
       "num_train_nodes: 1,562\n",
-      "num_test_nodes: 402\n",
-      "num_nodes: 1,964\n",
-      "len(full_src_dst_df): 3534\n",
+      "num_test_nodes: 401\n",
+      "num_nodes: 1,963\n",
+      "len(full_src_dst_df): 3532\n",
       "average_degree: 1.8\n",
-      "num_edges: 1,806\n"
+      "num_edges: 1,805\n",
+      "num_classes: 8\n"
      ]
     }
    ],
@@ -588,7 +589,12 @@
     "# format with comma\n",
     "num_edges = \"{:,}\".format(num_edges)\n",
     "print('num_edges:', num_edges)\n",
-    "stattotex(num_edges, 'numEdges', '../../../Output/Modelling/Graph Neural Network/learnable_net_stats.tex')"
+    "stattotex(num_edges, 'numEdges', '../../../Output/Modelling/Graph Neural Network/learnable_net_stats.tex')\n",
+    "\n",
+    "# Number of classes\n",
+    "num_classes = len(feature_and_class_df['Rating'].unique())\n",
+    "print('num_classes:', num_classes)\n",
+    "stattotex(num_classes, 'numClasses', '../../../Output/Modelling/Graph Neural Network/learnable_net_stats.tex')"
    ]
   }
  ],
