--- a/Code/Modelling/Graph Neural Network/Create Learnable Network for Rating Prediction.ipynb
+++ b/Code/Modelling/Graph Neural Network/Create Learnable Network for Rating Prediction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
        "[5509 rows x 205 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
        "[2750 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "[1807 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +736,197 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train_test_80_20</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>test</td>\n",
+       "      <td>A</td>\n",
+       "      <td>208</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>train</td>\n",
+       "      <td>A</td>\n",
+       "      <td>833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>test</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>train</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>test</td>\n",
+       "      <td>AAA</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>train</td>\n",
+       "      <td>AAA</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>test</td>\n",
+       "      <td>B</td>\n",
+       "      <td>154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>train</td>\n",
+       "      <td>B</td>\n",
+       "      <td>613</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>test</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>284</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>train</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>1173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>test</td>\n",
+       "      <td>BBB</td>\n",
+       "      <td>363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>train</td>\n",
+       "      <td>BBB</td>\n",
+       "      <td>1396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>test</td>\n",
+       "      <td>C</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>train</td>\n",
+       "      <td>C</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>test</td>\n",
+       "      <td>CC</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>train</td>\n",
+       "      <td>CC</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>test</td>\n",
+       "      <td>CCC</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>train</td>\n",
+       "      <td>CCC</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>test</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>train</td>\n",
+       "      <td>D</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   train_test_80_20 Rating  count\n",
+       "6              test      A    208\n",
+       "2             train      A    833\n",
+       "11             test     AA     52\n",
+       "7             train     AA    164\n",
+       "13             test    AAA     24\n",
+       "10            train    AAA     88\n",
+       "8              test      B    154\n",
+       "3             train      B    613\n",
+       "5              test     BB    284\n",
+       "1             train     BB   1173\n",
+       "4              test    BBB    363\n",
+       "0             train    BBB   1396\n",
+       "16             test      C      4\n",
+       "14            train      C     12\n",
+       "18             test     CC      2\n",
+       "17            train     CC      4\n",
+       "12             test    CCC     26\n",
+       "9             train    CCC    101\n",
+       "19             test      D      1\n",
+       "15            train      D      7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In feature_and_class_df, value counts by train_test_80_20 and Rating\n",
+    "feature_and_class_df[['train_test_80_20', 'Rating']].value_counts().reset_index().sort_values(['Rating', 'train_test_80_20'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -751,27 +941,39 @@
       "drop items in classes with only one training node\n",
       "length of feature_and_class_df\n",
       "1965\n",
+      "train_count value counts by rating\n",
+      "Rating  train_count\n",
+      "BBB     502            622\n",
+      "BB      365            455\n",
+      "A       350            437\n",
+      "B       190            241\n",
+      "AA      86             116\n",
+      "AAA     46              63\n",
+      "CCC     21              25\n",
+      "C       2                4\n",
+      "D       1                2\n",
+      "Name: count, dtype: int64\n",
       "new length of feature_and_class_df\n",
-      "1964\n",
+      "1963\n",
       "new train test split\n",
       "train_test_80_20\n",
       "train    1562\n",
-      "test      402\n",
+      "test      401\n",
       "Name: count, dtype: int64\n",
       "keeping only src and dst that are in feature_and_class_df\n",
       "length of src_dst_df\n",
       "1807\n",
       "new length of src_dst_df\n",
-      "1806\n",
+      "1805\n",
       "keeping only items that are connected/have a node in src or dst in src_dst_df\n",
       "length of feature_and_class_df\n",
-      "1964\n",
+      "1963\n",
       "new length of feature_and_class_df\n",
-      "1964\n",
+      "1963\n",
       "new train test split\n",
       "train_test_80_20\n",
       "train    1562\n",
-      "test      402\n",
+      "test      401\n",
       "Name: count, dtype: int64\n"
      ]
     },
@@ -779,13 +981,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_6980\\581827998.py:13: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_22576\\1691993259.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  feature_and_class_df['train_indicator'] = feature_and_class_df['train_test_80_20'].apply(lambda x: 1 if x == 'train' else 0)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_6980\\581827998.py:14: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_22576\\1691993259.py:14: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -803,13 +1005,15 @@
     "print('new length of feature_and_class_df')\n",
     "print(len(feature_and_class_df))\n",
     "\n",
-    "# Drop any items that belong to target_column values with only one training node ('train_test_80_20' == 'train') in the training data\n",
+    "# Drop any items that belong to target_column values with only one training node\n",
     "print('drop items in classes with only one training node')\n",
     "print('length of feature_and_class_df')\n",
     "print(len(feature_and_class_df))\n",
     "feature_and_class_df['train_indicator'] = feature_and_class_df['train_test_80_20'].apply(lambda x: 1 if x == 'train' else 0)\n",
     "feature_and_class_df['train_count'] = feature_and_class_df.groupby(target_column)['train_indicator'].transform('sum')\n",
-    "feature_and_class_df = feature_and_class_df[(feature_and_class_df['train_count'] > 1) | (feature_and_class_df['train_test_80_20'] == 'test')]\n",
+    "print('train_count value counts by rating')\n",
+    "print(feature_and_class_df[['Rating', 'train_count']].value_counts())\n",
+    "feature_and_class_df = feature_and_class_df[(feature_and_class_df['train_count'] > 1)]\n",
     "feature_and_class_df = feature_and_class_df.drop(columns=['train_indicator', 'train_count'])\n",
     "print('new length of feature_and_class_df')\n",
     "print(len(feature_and_class_df))\n",
@@ -837,6 +1041,168 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>train_test_80_20</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>test</td>\n",
+       "      <td>A</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>train</td>\n",
+       "      <td>A</td>\n",
+       "      <td>350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>test</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>train</td>\n",
+       "      <td>AA</td>\n",
+       "      <td>86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>test</td>\n",
+       "      <td>AAA</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>train</td>\n",
+       "      <td>AAA</td>\n",
+       "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>test</td>\n",
+       "      <td>B</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>train</td>\n",
+       "      <td>B</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>test</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>train</td>\n",
+       "      <td>BB</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>test</td>\n",
+       "      <td>BBB</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>train</td>\n",
+       "      <td>BBB</td>\n",
+       "      <td>502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>test</td>\n",
+       "      <td>C</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>train</td>\n",
+       "      <td>C</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>test</td>\n",
+       "      <td>CCC</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>train</td>\n",
+       "      <td>CCC</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   train_test_80_20 Rating  count\n",
+       "6              test      A     87\n",
+       "2             train      A    350\n",
+       "10             test     AA     30\n",
+       "7             train     AA     86\n",
+       "12             test    AAA     17\n",
+       "9             train    AAA     46\n",
+       "8              test      B     51\n",
+       "3             train      B    190\n",
+       "5              test     BB     90\n",
+       "1             train     BB    365\n",
+       "4              test    BBB    120\n",
+       "0             train    BBB    502\n",
+       "14             test      C      2\n",
+       "15            train      C      2\n",
+       "13             test    CCC      4\n",
+       "11            train    CCC     21"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In feature_and_class_df, value counts by train_test_80_20 and Rating\n",
+    "feature_and_class_df[['train_test_80_20', 'Rating']].value_counts().reset_index().sort_values(['Rating', 'train_test_80_20'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -845,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,6 +1248,57 @@
     "\n",
     "# src_dst_df\n",
     "src_dst_df.to_excel('../../../Data/Learnable Network/src_dst_df.xlsx', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create special custom_mapping due to limited rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted_uniq_ratings\n",
+      "['AAA', 'AA', 'A', 'BBB', 'BB', 'B', 'CCC', 'C']\n",
+      "rating_to_int\n",
+      "{'AAA': 0, 'AA': 1, 'A': 2, 'BBB': 3, 'BB': 4, 'B': 5, 'CCC': 6, 'C': 7}\n",
+      "rating_to_int_df\n",
+      "  Rating  Rating_int\n",
+      "0    AAA           0\n",
+      "1     AA           1\n",
+      "2      A           2\n",
+      "3    BBB           3\n",
+      "4     BB           4\n",
+      "5      B           5\n",
+      "6    CCC           6\n",
+      "7      C           7\n"
+     ]
+    }
+   ],
+   "source": [
+    "uniq_ratings = feature_and_class_df['Rating'].unique()\n",
+    "ordering = ['AAA', 'AA', 'A', 'BBB', 'BB', 'B', 'CCC', 'CC', 'C', 'D']\n",
+    "# sorted uniq_ratings\n",
+    "sorted_uniq_ratings = sorted(uniq_ratings, key=lambda x: ordering.index(x))\n",
+    "print('sorted_uniq_ratings')\n",
+    "print(sorted_uniq_ratings)\n",
+    "# convert to enumerated dictionary\n",
+    "rating_to_int = {rating: i for i, rating in enumerate(sorted_uniq_ratings)}\n",
+    "print('rating_to_int')\n",
+    "print(rating_to_int)\n",
+    "# save to dictionary to disk\n",
+    "rating_to_int_df = pd.DataFrame(list(rating_to_int.items()), columns=['Rating', 'Rating_int'])\n",
+    "print('rating_to_int_df')\n",
+    "print(rating_to_int_df)\n",
+    "rating_to_int_df.to_excel('../../../Data/Learnable Network/rating_to_int.xlsx', index=False)"
    ]
   }
  ],
