--- a/Output/Modelling/Graph Neural Network/learnable_net_stats.tex
+++ b/Output/Modelling/Graph Neural Network/learnable_net_stats.tex
@@ -13,3 +13,19 @@
 \renewcommand{\numNodes}{1,964}
 \renewcommand{\averageDegree}{1.8}
 \renewcommand{\numEdges}{1,806}
+\renewcommand{\numTrainNodes}{1,562}
+\renewcommand{\numTestNodes}{401}
+\renewcommand{\numNodes}{1,963}
+\renewcommand{\averageDegree}{1.8}
+\renewcommand{\numEdges}{1,805}
+\renewcommand{\numTrainNodes}{1,562}
+\renewcommand{\numTestNodes}{401}
+\renewcommand{\numNodes}{1,963}
+\renewcommand{\averageDegree}{1.8}
+\renewcommand{\numEdges}{1,805}
+\renewcommand{\numTrainNodes}{1,562}
+\renewcommand{\numTestNodes}{401}
+\renewcommand{\numNodes}{1,963}
+\renewcommand{\averageDegree}{1.8}
+\renewcommand{\numEdges}{1,805}
+\newcommand{\numClasses}{8}
