--- a/Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex
+++ b/Output/Modelling/Graph Neural Network/other_classifiers_on_gnn_data.tex
@@ -6,3 +6,24 @@
 \renewcommand{\retrainXGBAccuracy}{0.8209}
 \renewcommand{\pretrainedLRAccuracy}{0.6692}
 \renewcommand{\pretrainedXGBAccuracy}{0.893}
+\renewcommand{\retrainLRAccuracy}{0.6219}
+\renewcommand{\retrainXGBAccuracy}{0.8209}
+\renewcommand{\pretrainedLRAccuracy}{0.6692}
+\renewcommand{\pretrainedXGBAccuracy}{0.893}
+\renewcommand{\retrainLRAccuracy}{0.6219}
+\renewcommand{\retrainXGBAccuracy}{0.8209}
+\renewcommand{\pretrainedLRAccuracy}{0.6692}
+\renewcommand{\pretrainedXGBAccuracy}{0.893}
+\renewcommand{\retrainLRAccuracy}{0.6234}
+\renewcommand{\retrainXGBAccuracy}{0.8229}
+\renewcommand{\pretrainedLRAccuracy}{0.6683}
+\renewcommand{\pretrainedXGBAccuracy}{0.8928}
+\renewcommand{\retrainLRAccuracy}{0.6234}
+\renewcommand{\retrainXGBAccuracy}{0.8229}
+\renewcommand{\pretrainedLRAccuracy}{0.6683}
+\renewcommand{\pretrainedXGBAccuracy}{0.8928}
+\renewcommand{\retrainXGBAccuracy}{0.8229}
+\renewcommand{\retrainLRAccuracy}{0.6234}
+\renewcommand{\retrainXGBAccuracy}{0.8229}
+\renewcommand{\pretrainedLRAccuracy}{0.6683}
+\renewcommand{\pretrainedXGBAccuracy}{0.8928}
